index.html changed

--- a/layouts/partials/sections/v3/footer.html
+++ b/layouts/partials/sections/v3/footer.html
@@ -1,9 +1,4 @@
 <footer>
-  <head>
-    <center><h4>Buy Me a Coffee☕</h4></center>
-    <center><form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_IhMKbiiUVIUa7b" async> </script> </form></center>
-     <script src="https://www.google.com/recaptcha/api.js"></script>
-  </head>
   <!-- recent posts -->
   <div class="news container py-3" data-aos="fade-up" data-aos-easing="linear" data-aos-once="true">
     {{ if .Site.Params.recentposts }}
@@ -126,7 +121,7 @@
   </div>
   {{ end }}
   <br>
-  <center><a href="https://www.teacheron.com/tutor-profile/6cEQ?r=6cEQ" target="_blank" style="display: inline-block;"><img src="https://www.teacheron.com/resources/assets/img/badges/writeToReview.png" style="width: 160px !important; height: 68px !important"></a></center>
+
   <div class="container bg-transparent py-4">
     <div class="row justify-content-center">
       <div class="col-md-4 text-center order-2 order-lg-1 order-md-1">
@@ -136,15 +131,15 @@
               width="40px">
           </a>
         </div>
-        &copy; {{ dateFormat "2006" now }} All Rights Reserved
+        &copy; {{ dateFormat "2024" now }} All Rights Reserved
         <div>
-           Made with &#10084; | Designed and Developed by <a href="https://www.linkedin.com/in/parag-jadhav-429026146//" target="_blank">Rohan Patankar</a>
+           Made with &#10084; | Designed and Developed by <a href="https://www.linkedin.com/in/parag-jadhav-429026146//" target="_blank">Parag Jadhav</a>
         </div>
         <br>
         <div>
         <!-- hitwebcounter Code START -->
           <a href="https://www.hitwebcounter.com" target="_blank">
-          <img src="https://hitwebcounter.com/counter/counter.php?page=7963653&style=0010&nbdigits=3&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+          <img src="https://hitwebcounter.com/counter/counter.php?page=13106214&amp;style=0010&amp;nbdigits=5&amp;type=page&amp;initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
           <p>Total Views</p>
         </div>
       </div>
